--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "ru-final-project",
   "version": "0.0.0",
   "private": true,
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "//start": "node ./bin/www",
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
