--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ru-final-project",
   "version": "0.0.0",
   "private": true,
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "//start": "node ./bin/www",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.3.0",
