--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "client-sessions": "^0.7.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "mongoose": "^4.6.8",
