--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "mongoose": "^4.6.8",
     "morgan": "~1.7.0",
+    "nodemailer": "^2.6.4",
     "serve-favicon": "~2.3.0"
   }
 }
