--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.14.0",
+    "install": "^0.8.2",
     "jade": "~1.11.0",
     "mongoose": "^4.6.8",
     "morgan": "~1.7.0",
-    "nodemailer": "^2.6.4",
+    "nodemailer": "^0.7.1",
+    "npm": "^4.0.2",
+    "sendgrid": "^4.7.1",
     "serve-favicon": "~2.3.0"
   }
 }
